--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css" title="" type="text/css" />
+  <meta http-equiv='content-type' content='text/html; charset=utf-8'>
+  <link rel='stylesheet' href='vendor/bootstrap/dist/css/bootstrap.min.css' type='text/css'>
+  <link rel='stylesheet' href='styles/main.css' type='text/css'>
   <title>NSS Remote Projection Apps</title>
 </head>
 <body>
-  <div>
+  <div class='test'>
     I've got a body
   </div>
 </body>
