--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv='content-type' content='text/html; charset=utf-8'>
   <link rel='stylesheet' href='vendor/bootstrap/dist/css/bootstrap.min.css' type='text/css'>
-  <link rel='stylesheet' href='styles/main.css' type='text/css'>
+  <link rel='stylesheet' href='styles/style.css' type='text/css'>
   <title>NSS Remote Projection Apps</title>
 </head>
 <body>
