--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,16 @@
   <title>NSS Remote Projection Apps</title>
 </head>
 <body>
-  <div class='test'>
-    I've got a body
+  <div class='container-fluid'>
+    <div class='row'>
+      <div class='col-sm-1 col-md-2 col-lg-3'><!-- left gutter --></div>
+      <div class='col-xs-12 col-sm-10 col-md-8 col-lg-6'>
+        <div class='content'>
+          I am content!
+        </div>
+      </div>
+      <div class='col-sm-1 col-md-2 col-lg-3'><!-- right gutter --></div>
+    </div>
   </div>
 </body>
 </html>
