--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
       <div class='col-sm-1 col-md-2 col-lg-3'><!-- left gutter --></div>
       <div class='col-xs-12 col-sm-10 col-md-8 col-lg-6'>
         <div class='content'>
-          I am content!
+          <a class='btn btn-default form-control bsize' href='#'>For OS X</a>
+          <a class='btn btn-default form-control bsize' href='#'>For Windows</a>
         </div>
       </div>
       <div class='col-sm-1 col-md-2 col-lg-3'><!-- right gutter --></div>
