Modified links to buttons, styled, new font

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,13 @@
       <div class='col-sm-1 col-md-2 col-lg-3'><!-- left gutter --></div>
       <div class='col-xs-12 col-sm-10 col-md-8 col-lg-6'>
         <div class='content'>
-          <a class='btn btn-default form-control bsize' href='#'>For OS X</a>
-          <a class='btn btn-default form-control bsize' href='#'>For Windows</a>
+          <button id='osx' class='btn btn-default form-control bsize button'>Download the wireless projection app for<br><span class='text'>OS X</span></button>
+          <button id='win' class='btn btn-default form-control bsize button'>Download the wireless projection app for<br><span class='text'>Windows</span></button>
         </div>
       </div>
       <div class='col-sm-1 col-md-2 col-lg-3'><!-- right gutter --></div>
     </div>
   </div>
+  <script src='script.js' type='text/javascript' charset='utf-8'></script>
 </body>
 </html>
