--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <meta http-equiv='content-type' content='text/html; charset=utf-8'>
   <link rel='stylesheet' href='vendor/bootstrap/dist/css/bootstrap.min.css' type='text/css'>
   <link rel='stylesheet' href='styles/style.css' type='text/css'>
+  <link rel='shortcut icon' href='images/NSS-empty-logo.png'>
   <title>NSS Remote Projection Apps</title>
 </head>
 <body>
